# Map-Filter-Reduce

./: .gitignore  CMakeLists.txt  README.md
back-end/: CMakeLists.txt  Executor.h  FunctionFactory.h  RDD.cpp  RDD.h  RDD.hpp  RDD_Pair.h  RDD_Pair.hpp  TypeCastLists.h  hostfile  master_backend.cc  test_backend.cc  worker.hpp
frontend/: MFRlib.py  Parser.py  executionGraph.py  source.py
protos/: mfr.proto
test_generator_scripts/: test_generate_nums.c  test_generate_strings.c
